--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,10 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.8.0",
+		"react-router-dom": "^6.9.0",
 		"react-scripts": "5.0.1",
+		"react-spinners": "^0.13.8",
+		"react-useanimations": "^2.10.0",
 		"wait-on": "^7.0.1",
 		"web-vitals": "^2.1.4"
 	},
