--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@craco/craco": "^7.0.0-alpha.3",
 		"@electron/remote": "^2.0.9",
 		"@tailwindcss/container-queries": "^0.1.0",
 		"@testing-library/jest-dom": "^5.16.5",
@@ -13,6 +14,7 @@
 		"electron": "^23.1.3",
 		"electron-is-dev": "^2.0.0",
 		"electron-window-state": "^5.0.3",
+		"node-polyfill-webpack-plugin": "^2.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.8.0",
