--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
 		"@testing-library/user-event": "^13.5.0",
 		"concurrently": "^7.6.0",
 		"cross-env": "^7.0.3",
+		"dotenv": "^16.0.3",
 		"electron": "^23.1.3",
 		"electron-is-dev": "^2.0.0",
 		"electron-window-state": "^5.0.3",
