--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
 		"electron": "^23.1.3",
 		"electron-is-dev": "^2.0.0",
 		"electron-window-state": "^5.0.3",
+		"http-proxy-middleware": "^2.0.6",
 		"node-polyfill-webpack-plugin": "^2.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -27,7 +28,6 @@
 		"web-vitals": "^2.1.4"
 	},
 	"main": "public/main.js",
-	"proxy": "http://localhost:3001",
 	"homepage": "./",
 	"scripts": {
 		"start": "react-scripts start",
