--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
 		"date-fns": "^2.29.3",
 		"express": "^4.17.1",
 		"nodemon": "^2.0.21",
+		"react-router-dom": "^6.10.0",
 		"sqlite3": "^5.1.6",
 		"uuid": "^9.0.0"
 	}
