--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"start": "concurrently 'npm run start --prefix client' 'npm run start --prefix server'",
 		"dev": "concurrently 'npm run start --prefix client' 'npm run dev --prefix server'",
-		"build": "npm run build --prefix client"
+		"build": "npm install --prefx client && npm run build --prefix client"
 	},
 	"keywords": [
 		"school",
