--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,7 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/line-clamp": "^0.4.2",
-		"tailwindcss": "^3.3.0"
+		"tailwindcss": "^3.3.0",
+		"react-scripts": "5.0.1"
 	}
 }
