--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"concurrently": "8.0.1",
-		"react-hot-toast": "^2.4.0"
+		"react-hot-toast": "^2.4.0",
+		"react-scripts": "^5.0.1"
 	}
 }
