--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"start": "concurrently 'npm run start --prefix client' 'npm run start --prefix server'",
 		"dev": "concurrently 'npm run start --prefix client' 'npm run dev --prefix server'",
-		"build": "(cd client && npm install && CI=false npm run build)"
+		"build": "(cd client && npm install) && (cd client && npm run build)"
 	},
 	"keywords": [
 		"school",
