--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,6 @@
 		"concurrently": "^7.6.0",
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.0.3",
-		"electron": "^23.1.3",
 		"electron-is-dev": "^2.0.0",
 		"electron-window-state": "^5.0.3",
 		"http-proxy-middleware": "^2.0.6",
@@ -59,6 +58,8 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/line-clamp": "^0.4.2",
-		"tailwindcss": "^3.3.0"
+		"tailwindcss": "^3.3.0",
+		"electron": "^23.1.3",
+		"electron-builder": "^23.6.0"
 	}
 }
