--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
 		"nodemon": "^2.0.21",
 		"react-router-dom": "^6.10.0",
 		"sqlite3": "^5.1.6",
-		"uuid": "^9.0.0"
+		"uuid": "^9.0.0",
+		"caniuse-lite": "^1.0.30001534"
 	}
 }
